android_library(
    name = "MultiWindowSampleLib",
    srcs = glob(["app/src/main/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.MultiWindowSample",
    manifest = "app/src/main/AndroidManifest.xml",
    resource_files = glob(["app/src/main/res/**/*"]),
    deps = [
        "@com_android_support_support_annotations_27_0_2//jar",
        "@com_google_guava_guava//jar",
    ],
)

android_binary(
    name = "MultiWindowSample",
    custom_package = "com.example.android.testing.espresso.MultiWindowSample",
    manifest = "app/src/main/EmptyManifest.xml",
    deps = [":MultiWindowSampleLib"],
)

android_library(
    name = "MultiWindowSampleTestLib",
    srcs = glob(["app/src/androidTest/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.MultiWindowSample",
    deps = [
        ":MultiWindowSampleLib",
        "//:test_deps",
    ],
)

android_binary(
    name = "MultiWindowSampleTest",
    custom_package = "com.example.android.testing.espresso.MultiWindowSample",
    instruments = ":MultiWindowSample",
    manifest = "app/src/androidTest/AndroidManifest.xml",
    deps = [":MultiWindowSampleTestLib"],
)

android_instrumentation_test(
    name = "MultiWindowSampleInstrumentationTest",
    target_device = "@android_test_support//tools/android/emulated_devices/nexus_6:android_23_x86_qemu2",
    test_app = ":MultiWindowSampleTest",
)
