load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

licenses(["notice"])  # Apache 2.0

android_library(
    name = "MultiWindowSampleLib",
    srcs = glob(["app/src/main/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.MultiWindowSample",
    manifest = "app/src/main/AndroidManifest.xml",
    resource_files = glob(["app/src/main/res/**/*"]),
    deps = [
        gmaven_artifact("com.android.support:support-annotations:jar:27.0.2"),
        "@com_google_guava_guava//jar",
    ],
)

android_binary(
    name = "MultiWindowSample",
    custom_package = "com.example.android.testing.espresso.MultiWindowSample",
    manifest = "app/src/main/AppManifest.xml",
    deps = [":MultiWindowSampleLib"],
)

android_library(
    name = "MultiWindowSampleTestLib",
    srcs = glob(["app/src/androidTest/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.MultiWindowSample",
    deps = [
        ":MultiWindowSampleLib",
        "//:test_deps",
    ],
)

android_binary(
    name = "MultiWindowSampleTest",
    custom_package = "com.example.android.testing.espresso.MultiWindowSample",
    instruments = ":MultiWindowSample",
    manifest = "app/src/androidTest/AndroidManifest.xml",
    deps = [":MultiWindowSampleTestLib"],
)

android_instrumentation_test(
    name = "MultiWindowSampleInstrumentationTest",
    target_device = "@android_test_support//tools/android/emulated_devices/generic_phone:android_23_x86_qemu2",
    test_app = ":MultiWindowSampleTest",
)
