licenses(["notice"])  # Apache 2.0

android_library(
    name = "RecyclerViewSampleLib",
    srcs = glob(["app/src/main/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.RecyclerViewSample",
    manifest = "app/src/main/AndroidManifest.xml",
    resource_files = glob(["app/src/main/res/**/*"]),
    deps = [
        "@com_android_support_recyclerview_v7_27_0_2//aar",
        "@com_android_support_support_annotations_27_0_2//jar",
        "@com_google_guava_guava//jar",
    ],
)

android_binary(
    name = "RecyclerViewSample",
    custom_package = "com.example.android.testing.espresso.RecyclerViewSample",
    manifest = "app/src/main/AppManifest.xml",
    deps = [":RecyclerViewSampleLib"],
)

android_library(
    name = "RecyclerViewSampleTestLib",
    srcs = glob(["app/src/androidTest/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.RecyclerViewSample",
    deps = [
        ":RecyclerViewSampleLib",
        "//:test_deps",
        "@com_android_support_test_espresso_espresso_contrib_3_0_2_alpha1//aar",
    ],
)

android_binary(
    name = "RecyclerViewSampleTest",
    custom_package = "com.example.android.testing.espresso.RecyclerViewSample",
    instruments = ":RecyclerViewSample",
    manifest = "app/src/androidTest/AndroidManifest.xml",
    deps = [":RecyclerViewSampleTestLib"],
)

android_instrumentation_test(
    name = "RecyclerViewSampleInstrumentationTest",
    target_device = "@android_test_support//tools/android/emulated_devices/generic_phone:android_23_x86_qemu2",
    test_app = ":RecyclerViewSampleTest",
)
