load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

licenses(["notice"])  # Apache 2.0

android_library(
    name = "RecyclerViewSampleLib",
    srcs = glob(["app/src/main/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.RecyclerViewSample",
    manifest = "app/src/main/AndroidManifest.xml",
    resource_files = glob(["app/src/main/res/**/*"]),
    deps = [
        gmaven_artifact("com.android.support:recyclerview_v7:aar:27.0.2"),
        gmaven_artifact("com.android.support:support-annotations:27.0.2"),
        "@com_google_guava_guava//jar",
    ],
)

android_binary(
    name = "RecyclerViewSample",
    custom_package = "com.example.android.testing.espresso.RecyclerViewSample",
    manifest = "app/src/main/AppManifest.xml",
    deps = [":RecyclerViewSampleLib"],
)

android_library(
    name = "RecyclerViewSampleTestLib",
    srcs = glob(["app/src/androidTest/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.RecyclerViewSample",
    deps = [
        gmaven_artifact("com.android.support.test.espresso:espresso-contrib:aar:3.0.2-alpha1"),
        ":RecyclerViewSampleLib",
        "//:test_deps",
    ],
)

android_binary(
    name = "RecyclerViewSampleTest",
    custom_package = "com.example.android.testing.espresso.RecyclerViewSample",
    instruments = ":RecyclerViewSample",
    manifest = "app/src/androidTest/AndroidManifest.xml",
    deps = [":RecyclerViewSampleTestLib"],
)

android_instrumentation_test(
    name = "RecyclerViewSampleInstrumentationTest",
    target_device = "@android_test_support//tools/android/emulated_devices/generic_phone:android_23_x86_qemu2",
    test_app = ":RecyclerViewSampleTest",
)
