load("@gmaven_rules//:defs.bzl", "gmaven_artifact")
load("//:common_defs.bzl", "androidxLibVersion", "espressoVersion", "minSdkVersion", "targetSdkVersion")

licenses(["notice"])  # Apache 2.0

android_library(
    name = "RecyclerViewSampleLib",
    srcs = glob(["app/src/main/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.RecyclerViewSample",
    manifest = "app/src/main/AndroidManifest.xml",
    resource_files = glob(["app/src/main/res/**/*"]),
    deps = [
        gmaven_artifact("androidx.recyclerview:recyclerview:aar:" + androidxLibVersion),
        gmaven_artifact("androidx.annotation:annotation:" + androidxLibVersion),
        "@com_google_guava_guava//jar",
    ],
)

android_binary(
    name = "RecyclerViewSample",
    custom_package = "com.example.android.testing.espresso.RecyclerViewSample",
    manifest = "app/src/main/AppManifest.xml",
    deps = [":RecyclerViewSampleLib"],
)

android_library(
    name = "RecyclerViewSampleTestLib",
    srcs = glob(["app/src/androidTest/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.RecyclerViewSample",
    deps = [
        gmaven_artifact("androidx.test.espresso:espresso-contrib:aar:" + espressoVersion),
        ":RecyclerViewSampleLib",
        "//:test_deps",
    ],
)

android_binary(
    name = "RecyclerViewSampleTest",
    custom_package = "com.example.android.testing.espresso.RecyclerViewSample",
    instruments = ":RecyclerViewSample",
    manifest = "app/src/androidTest/AndroidManifest.xml",
    manifest_values = {
        "minSdkVersion": minSdkVersion,
        "targetSdkVersion": targetSdkVersion,
    },
    deps = [":RecyclerViewSampleTestLib"],
)

API_LEVELS = [
    "19_x86",
    "21_x86",
    "22_x86",
    "23_x86",
]

[android_instrumentation_test(
    name = "RecyclerViewSampleInstrumentationTest_%s" % API_LEVEL,
    target_device = "@android_test_support//tools/android/emulated_devices/generic_phone:android_%s_qemu2" % API_LEVEL,
    test_app = ":RecyclerViewSampleTest",
) for API_LEVEL in API_LEVELS]
