load("@gmaven_rules//:defs.bzl", "gmaven_artifact")

licenses(["notice"])  # Apache 2.0

android_library(
    name = "BasicSampleLib",
    srcs = glob(["app/src/main/**/*.java"]),
    custom_package = "com.example.android.testing.uiautomator.BasicSample",
    manifest = "app/src/main/AndroidManifest.xml",
    resource_files = glob(["app/src/main/res/**/*"]),
    deps = ["@com_google_guava_guava//jar"],
)

android_binary(
    name = "BasicSample",
    custom_package = "com.example.android.testing.uiautomator.BasicSample",
    manifest = "app/src/main/AppManifest.xml",
    deps = [":BasicSampleLib"],
)

android_library(
    name = "BasicSampleTestLib",
    srcs = glob(["app/src/androidTest/**/*.java"]),
    custom_package = "com.example.android.testing.uiautomator.BasicSample",
    deps = [
        ":BasicSampleLib",
        "//:test_deps",
        gmaven_artifact("com.android.support.test.uiautomator:uiautomator:aar:v18.2.1.3"),
    ],
)

android_binary(
    name = "BasicSampleTest",
    custom_package = "com.example.android.testing.uiautomator.BasicSample",
    instruments = ":BasicSample",
    manifest = "app/src/androidTest/AndroidManifest.xml",
    deps = [":BasicSampleTestLib"],
)

android_instrumentation_test(
    name = "BasicSampleInstrumentationTest",
    target_device = "@android_test_support//tools/android/emulated_devices/generic_phone:android_23_x86_qemu2",
    test_app = ":BasicSampleTest",
)
